force-app/main/default/objects/Scheme_Slab__c/Scheme_Slab__c.object-meta.xml
<CustomObject>
    <label>Scheme Slab</label>
    <pluralLabel>Scheme Slabs</pluralLabel>
    <nameField>
        <displayFormat>SLAB-{0000}</displayFormat>
        <label>Slab No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>