force-app/main/default/objects/Scheme_Slab__c/fields/Buy_Product__c.field-meta.xml
<CustomField>
    <fullName>Buy_Product__c</fullName>
    <label>Buy Product</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Product2</referenceTo>
    <relationshipName>SchemeSlab_Buy_Product</relationshipName>
    <type>Lookup</type>
</CustomField>