force-app/main/default/objects/Scheme_Slab__c/fields/Buy_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Buy_Quantity__c</fullName>
    <label>Buy Quantity</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>