force-app/main/default/objects/Scheme_Slab__c/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    <label>Discount Percent</label>
    <type>Percent</type>
    <precision>8</precision>
    <scale>3</scale>
</CustomField>