force-app/main/default/objects/Scheme_Slab__c/fields/Flat_Discount_on_Total__c.field-meta.xml
<CustomField>
    <fullName>Flat_Discount_on_Total__c</fullName>
    <label>Flat Discount on Total</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>