force-app/main/default/objects/Scheme_Slab__c/fields/Free_Product__c.field-meta.xml
<CustomField>
    <fullName>Free_Product__c</fullName>
    <label>Free Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Scheme Slab Free Products</relationshipLabel>
    <relationshipName>Scheme_Slab_Free_Products</relationshipName>
</CustomField>