force-app/main/default/objects/Scheme_Slab__c/fields/Get_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Get_Quantity__c</fullName>
    <label>Get Quantity</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>