force-app/main/default/objects/Scheme_Slab__c/fields/Is_Bundle_Item__c.field-meta.xml
<CustomField>
    <fullName>Is_Bundle_Item__c</fullName>
    <label>Is Bundle Item</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>