force-app/main/default/objects/Scheme_Slab__c/fields/Scheme__c.field-meta.xml
<CustomField>
    <fullName>Scheme__c</fullName>
    <label>Scheme</label>
    <type>MasterDetail</type>
    <referenceTo>Scheme__c</referenceTo>
    <relationshipLabel>Slabs</relationshipLabel>
    <relationshipName>Slabs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>