force-app/main/default/objects/Scheme_Slab__c/fields/Slab_Step_No__c.field-meta.xml
<CustomField>
    <fullName>Slab_Step_No__c</fullName>
    <label>Slab / Step No</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>